@@ -83,7 +83,7 @@ _DEBUG_MODE=NO
 ### and should be used **only** for testing!
 ###
 ### _AEGIR_VERSION=HEAD
-### _AEGIR_VERSION=1.0-boa-T-2
+### _AEGIR_VERSION=1.0-boa-T-5
 ###
 _AEGIR_VERSION=HEAD
 
@@ -328,7 +328,7 @@ _LOCAL_NETWORK_HN=""
 ### DON'T EDIT ANYTHING BELOW THIS LINE    ###
 ###----------------------------------------###
 
-_INSTALLER_VERSION=1.0-boa-T-2
+_INSTALLER_VERSION=1.0-boa-T-5
 _NGINX_VERSION=0.9.5
 _PHP_VERSION=5.2.17
 _PHP_FORCE_REINSTALL=NO
