@@ -131,7 +131,7 @@ _TUNE_PHP_TIMEOUT=3600
 ###----------------------------------------###
 ###
 ### _AEGIR_VERSION=HEAD
-### _AEGIR_VERSION=1.0-boa-T-2
+### _AEGIR_VERSION=1.0-boa-T-5
 ###
 _AEGIR_VERSION=HEAD
 
