@@ -100,7 +100,7 @@ _DEBUG_MODE=NO
 ### and should be used **only** for testing!
 ###
 ### _AEGIR_VERSION=HEAD
-### _AEGIR_VERSION=1.0-boa-T-2
+### _AEGIR_VERSION=1.0-boa-T-5
 ###
 _AEGIR_VERSION=HEAD
 
@@ -325,7 +325,7 @@ _LOCAL_NETWORK_IP=""
 ### DON'T EDIT ANYTHING BELOW THIS LINE    ###
 ###----------------------------------------###
 
-_INSTALLER_VERSION=1.0-boa-T-2
+_INSTALLER_VERSION=1.0-boa-T-5
 
 ## System
 _WEBG=www-data
