@@ -99,7 +99,7 @@
         add_header Last-Modified "";
         add_header Pragma "";
         add_header Cache-Control "public";
-        add_header X-Header "AdvAgg Generator 1.0-boa-T-2";
+        add_header X-Header "AdvAgg Generator 1.0-boa-T-5";
         try_files $uri @drupal;
     }
 
@@ -175,7 +175,7 @@
         rewrite  ^/sites/(.*)/files/imagecache/(.*)/sites/default/files/(.*)$  /sites/$host/files/imagecache/$2/$3 last;
         rewrite  ^/files/imagecache/(.*)$                                      /sites/$host/files/imagecache/$1 last;
         rewrite  ^/files/styles/(.*)$                                          /sites/$host/files/styles/$1 last;
-        add_header X-Header "IC Generator 1.0-boa-T-2";
+        add_header X-Header "IC Generator 1.0-boa-T-5";
         try_files $uri @drupal;
     }
 
@@ -424,7 +424,7 @@
     ### send all non-static requests to php-fpm, restricted to known php files
     ###
     location ~* ^/(?:index|boost_stats|update|authorize|rtoc|xmlrpc)\.php$ {
-          add_header X-Header "PHP-FPM Generator 1.0-boa-T-2";
+          add_header X-Header "PHP-FPM Generator 1.0-boa-T-5";
           try_files $uri =404;           ### check for existence of php file first
           fastcgi_pass   127.0.0.1:9000; ### php-fpm listening on port 9000
           track_uploads  uploads 60s;    ### required for upload progress
