@@ -1,6 +1,7 @@
 
 ### Stable Edition 1.0-boa-T-2
 ### Date: Wed, 6 Apr 2011 01:34:40 +0200
+### Installs Aegir working HEAD before 1.0-rc3
 
 ### Stable Edition 1.0-boa-T
 ### Date: Mon, 14 Mar 2011 02:43:15 +0100
